# iwg-form

./: package-lock.json  readme.md
backend/: .gitignore  requirements.txt  vercel.json
backend/.vercel/: project.json
backend/FormDriver/: FormDriver.py  README.md  pyproject.toml
backend/form_server/: README.md  pyproject.toml
backend/form_server/form_api/: DATA.py  __init__.py  form_data.py
frontend/: package-lock.json  package.json
frontend/.vercel/: project.json
frontend/iwg-form/: package-lock.json
frontend/iwg-form/src/: mainpage.css  mainpage.tsx
frontend/src/: mainpage.css  mainpage.tsx
frontend/src/components/CheckboxGroup/: Checkboxes.tsx
frontend/src/components/Form/: Form.css  Form.tsx
frontend/src/components/FormElement/: FormElement.css  FormElement.tsx
frontend/src/components/ToolTip/: ToolTip.tsx
frontend/src/utils/: formRowsConfig.tsx
